trying to figure out img path

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="collumns">
         <div class="collumn">
             <div class="head"><span class="headline hl3"><div id="shout"></div></span><p><div id="byline"></div></p></div>
-						<div id="output"></div>
+						<div id="newsphotos"></div>
             <div align = "center">~o0o~</div><br>
             <p><div id="newsphotos"></div></p>
             <div id="output2"></div>
