--- a/index.html
+++ b/index.html
@@ -29,35 +29,30 @@
             <div class="head"><span class="headline hl3"><div id="shout"></div></span><p><div id="byline"></div></p></div>
 						<div id="newsphotos"></div>
             <div align = "center">~o0o~</div><br>
-            <p><div id="newsphotos"></div></p>
-            <div id="output2"></div>
+            <div id="output2"></div><br>
+            <div id="output10"></div>
             </div>
         <div class="collumn">
             <div class="head"><span class="headline hl5"><div id="shout2"></div></span><p><div id="byline2"></div></p></div>
 						<div id="output3"></div>
             <div align = "center">~o0o~</div><br>
             </p>
-							<figure class="figure">
-								<img class="media" src="http://i.giphy.com/PW7MoTD2d9pJK.gif" alt="">
-								<figcaption class="figcaption">Hermine hoping for courage.</figcaption>
-							</figure>
+							<div id="newsphotos3"></div>
 
             <p><div id="output4"></div></p>
 
             </div>
-        <div class="collumn"><div class="head"><span class="headline hl1"><div id="shout3"></div></span><p><div id="byline3"></div></p></div><div id="output4"></div>Partially, but it also obeys your commands. Hey, Luke! May the Force be with you. I have traced the Rebel spies to her. Now she is my only link to finding their secret base.</p>
-	<figure class="figure">
-								<img class="media" src="http://i.giphy.com/4fDWVPMoSyhgc.gif" alt="">
-								<figcaption class="figcaption">"This time, let go your conscious self and act on instinct."</figcaption>
-						</figure>
-            <p>Leave that to me. Send a distress signal, and inform the Senate that all on board were killed. <span class="citation">"It's a procedurally generated newspaper, inspired by 19th and 21st century alogirthm"</span> This time, let go your conscious self and act on instinct. In my experience, there is no such thing as luck. You're all clear, kid. Let's blow this thing and go home!</p>
-            <p>You don't believe in the Force, do you? Partially, but it also obeys your commands. The plans you refer to will soon be back in our hands. As you wish.</p></div>
-        <div class="collumn"><div class="head"><span class="headline hl3"><div id="shout4"></div></span><p><div id="byline3"></div></p></div><p><div id="output5"></div>I should be incapable of drawing a single stroke at the present moment; and yet I feel that I never was a greater artist than now. When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream; and, as I lie close to the earth, a thousand unknown plants are noticed by me: when I hear the buzz of the little world among the stalks, and grow familiar with the countless indescribable forms of the insects and flies, then I feel the presence of the Almighty, who formed us in his own image, and the breath</p></div>
+        <div class="collumn"><div class="head"><span class="headline hl1"><div id="shout3"></div></span><p><div id="byline3"></div></p></div><div id="output4"></div><div id="output8"></div></p>
+	<div id="newsphotos4"></div>
+            <p><div id="output7"></div> <span class="citation">"It's a procedurally generated newspaper, inspired by 19th and 21st century alogirthm"</span> <div id="output9"></div></p>
+          </div>
+        <div class="collumn"><div class="head"><span class="headline hl3"><div id="shout4"></div></span><p><div id="byline3"></div></p></div><p><div id="output5"></div>  <div align = "center">~o0o~</div><br>
+        <div id="output6"></div></p></div>
         <div class="collumn"><div class="head"><span class="headline hl1">PARADATA, or, WHAT IS THIS?</span><p><span class="headline hl4">by SHAWN GRAHAM & KATE ELLENBERGER</span></p></div><p>Newspapers in the 19th century enjoyed a culture of reprinting educational items, stories, and news from other papers. These stories were sometimes selected to fit the available space, and sometimes from a desire to entertain or educate. Reprint culture is being studied by individuals such as Ryan Cordell and Melodee Beals. At the same time, some archaeologists are beginning to see old newspapers as a potential source for the lost or missing histories of an area - mentions of bones coming to light, of local antiquaries' excavations, and so on.</p>
 
 					<p>This 'newspaper' that you are looking at pays hommage to that older newspaper culture of reprinting, while at the same time commenting, on modern 'news media' by procedurally generating texts from the 'bones' of generative grammar. Each time this page is reloaded, the news is generated anew from a Tracery grammar. This grammar is derived from the study of 19th century newspapers in Western Quebec (The Equity) and northern New York State. It selects passages from these papers where the word 'bone' is present or implied, and recombines them in sometimes surprising ways. The passages were collected in the first place by ingesting OCR'd papers into AntConc, and generating a concordance and keywords-in-context file. </p>
 
-        <p>Tracery was designed and built by Kate Compton @galaxykate. This newspaper layout was designed and shared by user silkine on codepen.io.</div>
+        <p>Tracery was designed and built by Kate Compton @galaxykate. This newspaper layout was designed and shared by user silkine on codepen.io. Images are drawn from the British Library's Flickr stream.</div>
     </div>
 </div>
 
