--- a/index.html
+++ b/index.html
@@ -46,13 +46,14 @@
 	<div id="newsphotos4"></div>
             <p><div id="output7"></div> <span class="citation">"It's a procedurally generated newspaper, inspired by 19th and 21st century alogirthm"</span> <div id="output9"></div></p>
           </div>
-        <div class="collumn"><div class="head"><span class="headline hl3"><div id="shout4"></div></span><p><div id="byline3"></div></p></div><p><div id="output5"></div>  <div align = "center">~o0o~</div><br>
-        <div id="output6"></div></p></div>
+        <div class="collumn"><div class="head"><span class="headline hl3"><div id="shout4"></div></span><p><div id="byline3"></div></p><div id="newsphotos6"></div></div><p><div id="output5"></div>  <div align = "center">~o0o~</div><br>
+        <div id="output6"></div></p>
+      <div id="newsphotos4"></div></div>
         <div class="collumn"><div class="head"><span class="headline hl1">PARADATA, or, WHAT IS THIS?</span><p><span class="headline hl4">by SHAWN GRAHAM & KATE ELLENBERGER</span></p></div><p>Newspapers in the 19th century enjoyed a culture of reprinting educational items, stories, and news from other papers. These stories were sometimes selected to fit the available space, and sometimes from a desire to entertain or educate. Reprint culture is being studied by individuals such as Ryan Cordell and Melodee Beals. At the same time, some archaeologists are beginning to see old newspapers as a potential source for the lost or missing histories of an area - mentions of bones coming to light, of local antiquaries' excavations, and so on.</p>
 
-					<p>This 'newspaper' that you are looking at pays hommage to that older newspaper culture of reprinting, while at the same time commenting, on modern 'news media' by procedurally generating texts from the 'bones' of generative grammar. Each time this page is reloaded, the news is generated anew from a Tracery grammar. This grammar is derived from the study of 19th century newspapers in Western Quebec (The Equity) and northern New York State. It selects passages from these papers where the word 'bone' is present or implied, and recombines them in sometimes surprising ways. The passages were collected in the first place by ingesting OCR'd papers into AntConc, and generating a concordance and keywords-in-context file. </p>
+					<p>This 'newspaper' that you are looking at pays hommage to that older newspaper culture of reprinting, while at the same time commenting, on modern 'news media' by procedurally generating texts from the 'bones' of generative grammar. Each time this page is reloaded, the news is generated anew from a Tracery grammar. This grammar is derived from the study of 19th century newspapers in Western Quebec (The Equity) and northern New York State. It selects passages from these papers where the word 'bone' is present or implied, and recombines them in sometimes surprising or revealing ways. The passages were collected in the first place by ingesting OCR'd papers into AntConc, and generating a concordance and keywords-in-context file. </p>
 
-        <p>Tracery was designed and built by Kate Compton @galaxykate. This newspaper layout was designed and shared by user silkine on codepen.io. Images are drawn from the British Library's Flickr stream.</div>
+        <p>Tracery was designed and built by Kate Compton @galaxykate. This newspaper layout was designed and shared by user silkine on codepen.io. Images are drawn from the British Library's Flickr stream, where they have been tagged with the word 'bone' - thus, another algorithmic expression of the bones underlying the web.</div>
     </div>
 </div>
 
