--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div id="output8"></div></p>
             <div id="newsphotos4"></div>
             <p><div id="output7"></div>
-            <span class="citation">"It's a procedurally generated newspaper, inspired by 19th and 21st century alogirthm"</span>
+            <span class="citation">"It's a procedurally generated newspaper, built on the bones of 19th and 21st century algorithms"</span>
             <div id="output9"></div></p>
           </div>
         <div class="collumn"><div class="head"><span class="headline hl3">
