--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 <div class="head">
     <div class="headerobjectswrapper">
-        <div class="weatherforcastbox"><span style="font-style: italic;">Weatherforcast for the next several days: Plenty of <div id="weather1"></div></span><br><span>Wind: 7mph SSE; Ther: 73°F; Hum: 82%</span></div>
+        <div class="weatherforcastbox"><span style="font-style: italic;">Weatherforcast for the next several days: Plenty of <div id="weatherforecast"></div></span><br><span>Wind: 7mph SSE; Ther: 73°F; Hum: 82%</span></div>
         <header>Old Bones Daily</header>
     </div>
 
