--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div class="headerobjectswrapper">
         <div class="weatherforcastbox"><span style="font-style: italic;">Weatherforcast for the next several days: Plenty of <div id="weatherforecast"></div></span><br><span>Wind: 7mph SSE; Ther: 73°F; Hum: 82%</span></div>
         <header>Old Bones Daily</header>
+	<div class="weatherforcastbox"><span style="font-style: italic;">5 cents</span></div>    
     </div>
 
     <div class="subhead">Ottawa, Ontario - Thursday September 30, 1876 <br>The Truth Shall Make Ye Fret<br>Reload for More</div>
