--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <body>
 <div class="head">
     <div class="headerobjectswrapper">
-        <div class="weatherforcastbox"><span style="font-style: italic;">Weatherforcast for the next several days: Plenty of <div id="weatherforecast"></div></span><br><span>Wind: 7mph SSE; Ther: 73°F; Hum: 82%</span></div>
+        <div class="weatherforcastbox"><span style="font-style: italic;">Old Farmer's Prediction: Plenty of Sunshine Ahead!</span><br><span>Wind: 7mph SSE; Ther: 73°F; Hum: 82%</span></div>
         <header>Old Bones Daily</header>
-	<div class="weatherforcastbox"><span style="font-style: italic;">5 cents</span></div>    
+	
     </div>
 
     <div class="subhead">Ottawa, Ontario - Thursday September 30, 1876 <br>The Truth Shall Make Ye Fret<br>Reload for More</div>
